--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-    <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap");
+    </style>
     <title>React App</title>
   </head>
   <body>
